feat(graph): add #graph command support via codex.serve /graph/run
add new Gerrit REST endpoint codex-graph and register it in module bindings
introduce graph request/response DTOs (CodexGraphInput, CodexGraphResponse)
extend CodexAgentClient with /graph/run proxy logic, input validation, and response normalization
expose graph in hash command config so command suggestions include #graph
implement frontend #graph parsing and execution in chat panel:
support --framework / --framework-hint
build payload from current patchset files (code, file_paths)
forward selected model as env.LITELLM_MODEL
render graph summary and JSON result in chat output
update docs and quickstart guides (EN/CN) to cover #graph usage and flags